    netcfg/enable template. Thanks to Anthony L. Awtrey
    <tony@awtrey.com> for the patch. Closes: #538265

  [ Colin Watson ]
  * On Linux, feed the output of 'ip addr show' into /dev/random after the
    network is up to improve entropy. Idea picked up from Theodore Y. Ts'o,
    http://lkml.org/lkml/2007/12/8/108.
  * Upgrade to debhelper v7.

  [ Otavio Salvador ]
  * Use busybox' udhcpc by default but kfreebsd-amd64 and kfreebsd-i386
    since they lack support in busybox at this moment.

  [ Frans Pop ]
  * Remove no longer needed Lintian override for missing Standards-
    Version field.
  * Disable wireless support for s390.
  * Fix FTBS on s390 caused by upgrade to debhelper v7.
  * Drop support for the discontinued lpia architecture.

 -- Frans Pop <fjp@debian.org>  Fri, 27 Nov 2009 05:27:44 +0100

netcfg (1.51) unstable; urgency=low

  [ Luca Favatella ]
  * /var/run/stab is Linux PCMCIA specific; provide a stub implementation of
    find_in_stab for non-Linux systems.
  * Don't build-dep on libiw-dev on kfreebsd-{i386,amd64}.
  * Add kfreebsd-{i386,amd64} architectures.

  [ Aurelien Jarno ]
  * Use kernel independent code to determine loopback interfaces.
  * Simplify detection of up interfaces.
  * Don't detect interfaces twice or more.
  * Sort interfaces by name.
  * Port ethtool-lite to GNU/kFreeBSD, and default to unkwown status if
    not on GNU/Linux or GNU/kFreeBSD.

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 21 Jul 2009 23:17:11 +0200

netcfg (1.50) unstable; urgency=low

  [ Christian Perrier ]
  * No longer add ff02::3 to /etc/hosts
    Thanks to Marco d'Itri for the proposed change
    Closes: #533384

  [ Luca Favatella ]
  * If wireless is disabled, don't build and link wireless related stuff.
  * Disable by default wireless on non-linux architectures.
  * Inverse the logic about building without wireless support (WIRELESS=0).
  * Substitute Linux-specific code in get_all_ifs() using getifaddrs().

  [ Colin Watson ]